plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.4.1'
    id 'io.freefair.lombok' version '9.5.0'
    id 'com.diffplug.spotless' version '8.6.0'
}

group = 'yt.graven'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven {
        url = 'https://jitpack.io/'
    }
}

dependencies {
    implementation "net.dv8tion:JDA:6.5.0"
    implementation 'me.carleslc.Simple-YAML:Simple-Yaml:1.7.2'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.springframework:spring-context:5.3.39'
    implementation 'javax.inject:javax.inject:1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'ch.qos.logback:logback-classic:1.5.18'
    implementation 'club.minnced:discord-webhooks:0.8.0'
    implementation 'com.google.code.gson:gson:2.14.0'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'yt.graven.gravensupport.Main'
    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.net=ALL-UNNAMED"]
}


compileJava {
    options.encoding = "UTF-8"
}

jar {
    manifest {
        attributes('Main-Class': 'yt.graven.gravensupport.Main')
    }
}

spotless {
    java {
        googleJavaFormat()

        importOrder()
        removeUnusedImports()
        formatAnnotations()
        trimTrailingWhitespace()
        toggleOffOn()
    }
}